--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -381,6 +381,113 @@
               }
             }
           }
+
+          .replies {
+            .reply {
+              min-width: 460px;
+              min-height: 157px;
+              height: fit-content;
+              padding: 10px;
+              margin: 10px;
+              // margin-bottom: 20px; // 댓글 사이 간격
+              border-radius: 10px;
+              border: 3px solid #f66;
+              background: #fff;
+            }
+
+            .reply-header {
+              .comment-profile-image {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                margin-right: 10px;
+                border-width: 3px;
+                border-color: #f66;
+                object-fit: cover;
+                flex-shrink: 0;
+              }
+              .comment-header {
+                display: flex;
+                align-items: center;
+                margin-bottom: 5px;
+
+                .comment-user-info {
+                  display: flex;
+                  flex-direction: column;
+
+                  .comment-nickname {
+                    font-size: 24px;
+                  }
+
+                  .comment-date {
+                    font-size: 14px;
+                    margin-left: auto;
+                    color: #000;
+                  }
+                }
+
+                .comment-icons {
+                  top: -10px;
+                  width: min-content;
+                  display: flex;
+                  align-items: center;
+                  margin-left: auto;
+                  position: relative;
+
+                  .comment-heart-button {
+                    width: 35px;
+                    height: 35px;
+                    position: relative;
+                    z-index: 1;
+                  }
+                  .comment-heart-button:hover {
+                    cursor: pointer;
+                  }
+
+                  .comment-dots-button {
+                    position: relative;
+                    width: 30px;
+                    height: 30px;
+                    visibility: hidden;
+                    margin-left: 12px;
+                  }
+                  .comment-dots-button:hover {
+                    cursor: pointer;
+                  }
+
+                  .comment-dots-button.visible {
+                    visibility: visible;
+                  }
+
+                  .comment-menu {
+                    position: relative;
+                    right: 10px;
+                    top: -20px;
+                  }
+
+                  .comment-like-count {
+                    position: absolute;
+                    width: 18px;
+                    height: 18px;
+                    bottom: 0px;
+                    right: 62px;
+                    background-color: #f66;
+                    color: #fff;
+                    border-radius: 50%;
+                    padding: 2px 6px;
+                    font-size: 8px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.25);
+                    z-index: 2;
+                  }
+                }
+              }
+            }
+          }
+
           .reply-icon {
             width: 24px;
             height: 24px;
@@ -394,7 +501,10 @@
           .reply-icon-container {
             display: flex;
             flex-direction: row;
-            margin-top: 10px;
+            margin-top: 15px;
+            width: fit-content;
+            height: auto;
+
             .reply-count {
               margin-top: 2px;
               display: flex;
@@ -402,6 +512,39 @@
               font-size: 14px;
               div {
                 color: #f00;
+              }
+
+              .reply-input-container {
+                display: flex;
+                align-items: center;
+                flex-direction: row;
+                background-color: #f66;
+                border-radius: 10px;
+                width: 330px;
+                height: 30px;
+                margin-left: 10px;
+                box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.35);
+                input {
+                  background-color: transparent;
+                  border-color: transparent;
+                  color: #fff;
+                  padding: 5px;
+                }
+                input::placeholder {
+                  color: #fff;
+                }
+                input:focus {
+                  outline: none;
+                }
+                .comment-write-button {
+                  position: relative;
+                  width: 22px;
+                  height: 22px;
+                  right: -140px;
+                }
+                .comment-write-button:hover {
+                  cursor: pointer;
+                }
               }
             }
           }
