--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -384,8 +384,8 @@
 
           .replies {
             .reply {
-              min-width: 460px;
-              min-height: 157px;
+              width: 420px;
+              min-height: 100px;
               height: fit-content;
               padding: 10px;
               margin: 10px;
@@ -396,7 +396,11 @@
             }
 
             .reply-header {
-              .comment-profile-image {
+              display: flex;
+              align-items: center;
+              margin-bottom: 5px;
+
+              .reply-profile-image {
                 width: 50px;
                 height: 50px;
                 border-radius: 50%;
@@ -406,83 +410,78 @@
                 object-fit: cover;
                 flex-shrink: 0;
               }
-              .comment-header {
+
+              .reply-user-info {
                 display: flex;
-                align-items: center;
-                margin-bottom: 5px;
+                flex-direction: column;
 
-                .comment-user-info {
-                  display: flex;
-                  flex-direction: column;
-
-                  .comment-nickname {
-                    font-size: 24px;
-                  }
-
-                  .comment-date {
-                    font-size: 14px;
-                    margin-left: auto;
-                    color: #000;
-                  }
+                .reply-nickname {
+                  font-size: 14px;
                 }
 
-                .comment-icons {
-                  top: -10px;
-                  width: min-content;
+                .reply-date {
+                  font-size: 10px;
+                  margin-left: auto;
+                  color: #000;
+                }
+              }
+
+              .reply-icons {
+                top: -10px;
+                width: min-content;
+                display: flex;
+                align-items: center;
+                margin-left: auto;
+                position: relative;
+
+                .reply-heart-button {
+                  width: 35px;
+                  height: 35px;
+                  position: relative;
+                  z-index: 1;
+                }
+                .reply-heart-button:hover {
+                  cursor: pointer;
+                }
+
+                .reply-dots-button {
+                  position: relative;
+                  width: 30px;
+                  height: 30px;
+                  visibility: hidden;
+                  margin-left: 12px;
+                }
+                .reply-dots-button:hover {
+                  cursor: pointer;
+                }
+
+                .reply-dots-button.visible {
+                  visibility: visible;
+                }
+
+                .reply-menu {
+                  position: relative;
+                  right: 10px;
+                  top: -20px;
+                }
+
+                .reply-like-count {
+                  position: absolute;
+                  width: 18px;
+                  height: 18px;
+                  bottom: 0px;
+                  right: 62px;
+                  background-color: #f66;
+                  color: #fff;
+                  border-radius: 50%;
+                  padding: 2px 6px;
+                  font-size: 8px;
                   display: flex;
                   align-items: center;
-                  margin-left: auto;
-                  position: relative;
+                  justify-content: center;
 
-                  .comment-heart-button {
-                    width: 35px;
-                    height: 35px;
-                    position: relative;
-                    z-index: 1;
-                  }
-                  .comment-heart-button:hover {
-                    cursor: pointer;
-                  }
-
-                  .comment-dots-button {
-                    position: relative;
-                    width: 30px;
-                    height: 30px;
-                    visibility: hidden;
-                    margin-left: 12px;
-                  }
-                  .comment-dots-button:hover {
-                    cursor: pointer;
-                  }
-
-                  .comment-dots-button.visible {
-                    visibility: visible;
-                  }
-
-                  .comment-menu {
-                    position: relative;
-                    right: 10px;
-                    top: -20px;
-                  }
-
-                  .comment-like-count {
-                    position: absolute;
-                    width: 18px;
-                    height: 18px;
-                    bottom: 0px;
-                    right: 62px;
-                    background-color: #f66;
-                    color: #fff;
-                    border-radius: 50%;
-                    padding: 2px 6px;
-                    font-size: 8px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-
-                    box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.25);
-                    z-index: 2;
-                  }
+                  box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.25);
+                  z-index: 2;
                 }
               }
             }
@@ -536,13 +535,13 @@
                 input:focus {
                   outline: none;
                 }
-                .comment-write-button {
+                .reply-write-button {
                   position: relative;
                   width: 22px;
                   height: 22px;
                   right: -140px;
                 }
-                .comment-write-button:hover {
+                .reply-write-button:hover {
                   cursor: pointer;
                 }
               }
