--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -46,4 +46,5 @@
 @import 'components/community/postfeed';
 @import 'components/community/feeddetailmodal';
 @import 'components/community/dropdownmenu';
+@import 'components/community/dropdownreplymenu';
 @import 'page/passwordreset.scss';
