--- a/frontend/src/scss/page/_mypage.scss
+++ b/frontend/src/scss/page/_mypage.scss
@@ -90,4 +90,46 @@
       color: #f66;
     }
   }
+
+  .modal-content {
+    background-color: white;
+    border-radius: 20px 20px 0px 0px;
+    width: 950px;
+    height: 609px;
+    border: 5px solid #f66;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  .modal-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background: #f66;
+    border-radius: 10px 10px 0px 0px;
+
+    font-size: 23px;
+    letter-spacing: 2.3px;
+    font-weight: 400;
+    line-height: 100%; /* 23px */
+
+    .modal-header-title {
+      width: 90px;
+      height: 44px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+    }
+  }
 }
