--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -35,8 +35,10 @@
     }
 
     .community_name {
-      margin-left: 20px;
+      position: absolute;
+      right: 60px;
       color: #bbb;
+      font-size: 24px;
       height: fit-content;
     }
   }
