--- a/frontend/src/scss/components/common/_gallery.scss
+++ b/frontend/src/scss/components/common/_gallery.scss
@@ -10,11 +10,29 @@
   overflow: hidden;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
-  .community_name {
+  .dots_box {
     position: absolute;
     top: 10px;
-    right: 20px;
-    color: #bbb;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .gallery-img-container {
+    position: relative;
+    display: inline-block;
+
+    .community_name {
+      position: absolute;
+      right: 10px;
+      bottom: 10px;
+      font-size: 24px;
+      color: #bbb;
+      text-align: center;
+    }
   }
 
   .gallery-img {
@@ -47,17 +65,12 @@
       font-size: 20px;
       color: #fff;
       text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 250px;
     }
-
-    .dots_box {
-      position: absolute;
-      right: 0;
-      width: 30px;
-      height: 30px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    
   }
 
   &_info {
