--- a/frontend/src/scss/components/community/_feeddetailmodal.scss
+++ b/frontend/src/scss/components/community/_feeddetailmodal.scss
@@ -273,6 +273,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      overflow-x: hidden;
       overflow-y: auto;
       box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
 
@@ -648,6 +649,23 @@
                 margin-left: 10px;
               }
             }
+          }
+        }
+
+        .no-comments-container{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: auto;
+          padding-top: 42%;
+          .no-comments-icon{
+            width: 50px;
+            height: 50px;
+            margin-bottom: 15px;
+          }
+          .no-comments-text{
+            font-size: 22px;
           }
         }
       }
