--- a/frontend/src/scss/components/main/_section.scss
+++ b/frontend/src/scss/components/main/_section.scss
@@ -51,35 +51,29 @@
 .section2 {
   &-content {
     background-color: #fea3a3;
+    border: 1px solid black;
     width: 100%;
     height: 100%;
     position: relative;
   }
   &-1 {
+    width: 100%;
     position: absolute;
-    top: 350px;
-    right: 500px;
-    z-index: 4;
-  }
-  &-2 {
-    position: absolute;
-    top: 20px;
-    right: 250px;
-    z-index: 2;
-  }
-  &-3 {
-    position: absolute;
-    top: 450px;
-    right: 50px;
-    z-index: 3;
+    top: 25%;
+    .img{
+      width: 70%;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
   &-title_box {
+    width: 100%;
     font-size: 60px;
     position: absolute;
-    top: 40%;
-    left: 15%;
+    top: 10%; /* 수직 중앙 정렬 */
     font-weight: 900;
-    z-index: 10;
+    text-align: center;
   }
   &-subtitle {
     font-size: 20px;
