--- a/frontend/src/scss/components/common/_gallery.scss
+++ b/frontend/src/scss/components/common/_gallery.scss
@@ -7,7 +7,6 @@
   background-color: #f66;
   position: relative;
   border-radius: 20px;
-  overflow: hidden;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
   .dots_box {
@@ -38,8 +37,10 @@
   .gallery-img {
     width: 310px;
     height: auto;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 20px;
+    max-height: 500px;
+    min-height: 100px;
+    object-fit: cover;
   }
 
   .title_box {
